--- a/FeedCurator/Info.plist
+++ b/FeedCurator/Info.plist
@@ -41,9 +41,14 @@
 	<key>CFBundleShortVersionString</key>
 	<string>0.1</string>
 	<key>CFBundleVersion</key>
-	<string>236</string>
+	<string>243</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 Vincode, Inc. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
