--- a/FeedCurator/Info.plist
+++ b/FeedCurator/Info.plist
@@ -15,7 +15,7 @@
 			<key>CFBundleTypeIconFile</key>
 			<string></string>
 			<key>CFBundleTypeName</key>
-			<string>DocumentType</string>
+			<string>OPML</string>
 			<key>CFBundleTypeOSTypes</key>
 			<array>
 				<string>????</string>
@@ -54,7 +54,9 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>681</string>
+	<string>687</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.social-networking</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSAppTransportSecurity</key>
