--- a/FeedCurator/Info.plist
+++ b/FeedCurator/Info.plist
@@ -67,7 +67,7 @@
 		<true/>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019 Vincode, Inc. All rights reserved.</string>
+	<string>Copyright © 2019-2021 Vincode, Inc. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
